--- a/Hi_Opencv/Hi_Opencv/Hi_Opencv.ui
+++ b/Hi_Opencv/Hi_Opencv/Hi_Opencv.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1090</width>
-    <height>811</height>
+    <width>1082</width>
+    <height>759</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,7 +24,7 @@
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;dede&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="currentIndex">
-       <number>7</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -113,7 +113,7 @@
            <widget class="QLabel" name="label_2">
             <property name="maximumSize">
              <size>
-              <width>50</width>
+              <width>60</width>
               <height>20</height>
              </size>
             </property>
@@ -558,7 +558,7 @@
            <widget class="QLabel" name="label_5">
             <property name="maximumSize">
              <size>
-              <width>50</width>
+              <width>60</width>
               <height>20</height>
              </size>
             </property>
@@ -594,60 +594,6 @@
              <size>
               <width>200</width>
               <height>200</height>
-             </size>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="scaledContents">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item row="0" column="1" colspan="2">
-         <layout class="QVBoxLayout" name="verticalLayout_6">
-          <item>
-           <widget class="QLabel" name="label_4">
-            <property name="maximumSize">
-             <size>
-              <width>50</width>
-              <height>20</height>
-             </size>
-            </property>
-            <property name="font">
-             <font>
-              <family>Times New Roman</family>
-              <pointsize>12</pointsize>
-              <weight>75</weight>
-              <bold>true</bold>
-             </font>
-            </property>
-            <property name="text">
-             <string>input</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="Line" name="line_7">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_in_2">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>0</height>
              </size>
             </property>
             <property name="text">
@@ -703,13 +649,13 @@
          <widget class="QWidget" name="verticalWidget" native="true">
           <property name="minimumSize">
            <size>
-            <width>200</width>
+            <width>320</width>
             <height>600</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>200</width>
+            <width>300</width>
             <height>600</height>
            </size>
           </property>
@@ -797,13 +743,13 @@
             <widget class="QWidget" name="widget" native="true">
              <property name="minimumSize">
               <size>
-               <width>200</width>
+               <width>300</width>
                <height>200</height>
               </size>
              </property>
              <property name="maximumSize">
               <size>
-               <width>200</width>
+               <width>250</width>
                <height>200</height>
               </size>
              </property>
@@ -816,12 +762,18 @@
                   <verstretch>0</verstretch>
                  </sizepolicy>
                 </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>550</width>
+                  <height>0</height>
+                 </size>
+                </property>
                 <widget class="QLabel" name="label_from">
                  <property name="geometry">
                   <rect>
                    <x>0</x>
                    <y>10</y>
-                   <width>101</width>
+                   <width>121</width>
                    <height>16</height>
                   </rect>
                  </property>
@@ -879,134 +831,117 @@
                   <string>ELLIPSE</string>
                  </property>
                 </widget>
-               </widget>
-              </item>
-              <item>
-               <widget class="QWidget" name="widget_3" native="true">
-                <widget class="QLabel" name="label_6">
+                <widget class="QWidget" name="widget_3" native="true">
                  <property name="geometry">
                   <rect>
-                   <x>0</x>
-                   <y>10</y>
-                   <width>121</width>
-                   <height>20</height>
+                   <x>130</x>
+                   <y>0</y>
+                   <width>250</width>
+                   <height>200</height>
                   </rect>
                  </property>
-                 <property name="font">
-                  <font>
-                   <family>Times New Roman</family>
-                   <pointsize>12</pointsize>
-                   <weight>75</weight>
-                   <bold>true</bold>
-                  </font>
+                 <property name="minimumSize">
+                  <size>
+                   <width>250</width>
+                   <height>200</height>
+                  </size>
                  </property>
-                 <property name="text">
-                  <string>morph_operator:</string>
+                 <property name="maximumSize">
+                  <size>
+                   <width>250</width>
+                   <height>150</height>
+                  </size>
                  </property>
-                </widget>
-                <widget class="QRadioButton" name="radioButton_opening">
-                 <property name="geometry">
-                  <rect>
-                   <x>0</x>
-                   <y>30</y>
-                   <width>89</width>
-                   <height>16</height>
-                  </rect>
-                 </property>
-                 <property name="text">
-                  <string>Opening</string>
-                 </property>
-                </widget>
-                <widget class="QRadioButton" name="radioButton_closing">
-                 <property name="geometry">
-                  <rect>
-                   <x>0</x>
-                   <y>60</y>
-                   <width>89</width>
-                   <height>16</height>
-                  </rect>
-                 </property>
-                 <property name="text">
-                  <string>Closing</string>
-                 </property>
-                </widget>
-                <widget class="QRadioButton" name="radioButton_gradient">
-                 <property name="geometry">
-                  <rect>
-                   <x>0</x>
-                   <y>90</y>
-                   <width>89</width>
-                   <height>16</height>
-                  </rect>
-                 </property>
-                 <property name="text">
-                  <string>Gradient</string>
-                 </property>
-                </widget>
-                <widget class="QRadioButton" name="radioButton_top">
-                 <property name="geometry">
-                  <rect>
-                   <x>0</x>
-                   <y>120</y>
-                   <width>89</width>
-                   <height>16</height>
-                  </rect>
-                 </property>
-                 <property name="text">
-                  <string>Top Hat</string>
-                 </property>
-                </widget>
-                <widget class="QRadioButton" name="radioButton_black">
-                 <property name="geometry">
-                  <rect>
-                   <x>0</x>
-                   <y>150</y>
-                   <width>89</width>
-                   <height>16</height>
-                  </rect>
-                 </property>
-                 <property name="text">
-                  <string>Black Hat</string>
-                 </property>
+                 <widget class="QLabel" name="label_6">
+                  <property name="geometry">
+                   <rect>
+                    <x>0</x>
+                    <y>10</y>
+                    <width>141</width>
+                    <height>20</height>
+                   </rect>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <family>Times New Roman</family>
+                    <pointsize>12</pointsize>
+                    <weight>75</weight>
+                    <bold>true</bold>
+                   </font>
+                  </property>
+                  <property name="text">
+                   <string>morph_operator:</string>
+                  </property>
+                 </widget>
+                 <widget class="QRadioButton" name="radioButton_opening">
+                  <property name="geometry">
+                   <rect>
+                    <x>0</x>
+                    <y>30</y>
+                    <width>89</width>
+                    <height>16</height>
+                   </rect>
+                  </property>
+                  <property name="text">
+                   <string>Opening</string>
+                  </property>
+                 </widget>
+                 <widget class="QRadioButton" name="radioButton_closing">
+                  <property name="geometry">
+                   <rect>
+                    <x>0</x>
+                    <y>60</y>
+                    <width>89</width>
+                    <height>16</height>
+                   </rect>
+                  </property>
+                  <property name="text">
+                   <string>Closing</string>
+                  </property>
+                 </widget>
+                 <widget class="QRadioButton" name="radioButton_gradient">
+                  <property name="geometry">
+                   <rect>
+                    <x>0</x>
+                    <y>90</y>
+                    <width>89</width>
+                    <height>16</height>
+                   </rect>
+                  </property>
+                  <property name="text">
+                   <string>Gradient</string>
+                  </property>
+                 </widget>
+                 <widget class="QRadioButton" name="radioButton_top">
+                  <property name="geometry">
+                   <rect>
+                    <x>0</x>
+                    <y>120</y>
+                    <width>89</width>
+                    <height>16</height>
+                   </rect>
+                  </property>
+                  <property name="text">
+                   <string>Top Hat</string>
+                  </property>
+                 </widget>
+                 <widget class="QRadioButton" name="radioButton_black">
+                  <property name="geometry">
+                   <rect>
+                    <x>0</x>
+                    <y>146</y>
+                    <width>111</width>
+                    <height>20</height>
+                   </rect>
+                  </property>
+                  <property name="text">
+                   <string>Black Hat</string>
+                  </property>
+                 </widget>
                 </widget>
                </widget>
               </item>
              </layout>
-            </widget>
-           </item>
-           <item>
-            <widget class="QWidget" name="widget_2" native="true">
-             <widget class="QLabel" name="label_size">
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>10</y>
-                <width>111</width>
-                <height>16</height>
-               </rect>
-              </property>
-              <property name="font">
-               <font>
-                <family>Times New Roman</family>
-                <pointsize>12</pointsize>
-                <weight>75</weight>
-                <bold>true</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>erosion_size:</string>
-              </property>
-             </widget>
-             <widget class="QLineEdit" name="lineEdit_size">
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>30</y>
-                <width>91</width>
-                <height>20</height>
-               </rect>
-              </property>
-             </widget>
             </widget>
            </item>
            <item>
@@ -1033,6 +968,60 @@
            </item>
           </layout>
          </widget>
+        </item>
+        <item row="0" column="1">
+         <layout class="QVBoxLayout" name="verticalLayout_6">
+          <item>
+           <widget class="QLabel" name="label_4">
+            <property name="maximumSize">
+             <size>
+              <width>50</width>
+              <height>20</height>
+             </size>
+            </property>
+            <property name="font">
+             <font>
+              <family>Times New Roman</family>
+              <pointsize>12</pointsize>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
+            <property name="text">
+             <string>input</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="Line" name="line_7">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_in_2">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="scaledContents">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
@@ -1075,7 +1064,7 @@
             <property name="minimumSize">
              <size>
               <width>200</width>
-              <height>200</height>
+              <height>400</height>
              </size>
             </property>
             <property name="text">
@@ -2401,8 +2390,8 @@
              <widget class="QLabel" name="label_12">
               <property name="maximumSize">
                <size>
-                <width>50</width>
-                <height>20</height>
+                <width>70</width>
+                <height>30</height>
                </size>
               </property>
               <property name="font">
